added more to discussion (not finished)

--- a/paper/1_Initial/manuscript.qmd
+++ b/paper/1_Initial/manuscript.qmd
@@ -561,19 +561,36 @@ These findings challenge the assumption that the IAS is unidimensional [@murphy2
 
 <!-- Study 2 findings -->
 
+<!-- Interoception and interoception-related -->
 Study 2 examined the associations between the IAS, its item pairs identified in Study 1, and a range of interoceptive, affective, psychopathological, personality, and related measures. Consistent with previous research, self-reported interoceptive accuracy as assessed by the IAS showed reliable associations with other interoceptive and interoception-related measures [@brand2023; @garfinkel2015knowing; @gaggero2021]. Positive associations were found with interoceptive sensibility, particularly with MAIA facets reflecting noticing and trusting bodily sensations, attention regulation, and awareness of mind–body integration. In contrast, negative associations were observed with measures of interoceptive deficits, such as alexithymia and interoceptive confusion.
 
-Although the relationships between the BPQ–Body Awareness and the IAS, and between the BPQ–Autonomic Reactivity and the IAS, were both significant, they showed opposite directions: the former was positive, whereas the latter was negative. These results align with previous findings reporting a small positive association [@brand2023; @koike2023; @gaggero2021]. However, the literature remains mixed regarding the direction, magnitude, and significance of the relationship between the body awareness subscale and the IAS, with some studies reporting negative associations [@lin2023] and others positive [@brand2023; @gaggero2021; @todd2022] and others quadratic [@campos2021].
+Although the relationships between the BPQ–Body Awareness and the IAS, and between the BPQ–Autonomic Reactivity and the IAS, were both significant, they showed opposite directions: the former was positive, whereas the latter was negative, aligning with previous findings [@brand2023; @koike2023; @gaggero2021]. However, the literature remains mixed regarding the direction, magnitude, and significance of the relationship between the body awareness subscale and the IAS, with some studies reporting negative associations [@lin2023] and others positive [@brand2023; @gaggero2021; @todd2022] and others quadratic [@campos2021].
 
-Moreover, the Body Awareness subscale has been criticised for its ambiguous instructions, specifically whether respondents are meant to indicate attentional focus on bodily sensations, perceived accuracy in detecting them, or simply the frequency of such sensations. As a result, associations with other measures may vary depending on how participants interpret the items [@campos2021; @gabriele2022dissociations; @gaggero2021]. The theoretical focus of the BPQ-BA is also debated: some authors interpret it as assessing awareness of sensations during anxiety [@trevisan2021adaptive], whereas others view it as reflecting general awareness of both neutral and negative sensations [@desmedt2022].
+Moreover, the Body Awareness subscale has been criticised for its ambiguous instructions, specifically whether respondents are meant to indicate attentional focus on bodily sensations, perceived accuracy in detecting them, or simply the frequency of such sensations. As a result, associations with other measures may vary depending on how participants interpret the items [@campos2021; @gabriele2022dissociations; @gaggero2021]. The theoretical focus of the BPQ-BA is also debated: some authors interpret it as assessing awareness of sensations during anxiety [@trevisan2021adaptive], whereas others view it as reflecting general awareness of both neutral and negative sensations [@desmedt2022]. Thus, while we found a positive association between the BPQ–Body Awareness subscale and the IAS, this result should be interpreted with caution. Because we could not assess participants’ understanding of the BPQ items, we recommend that future studies using both the BPQ-BA and the IAS control for participants’ interpretation of the scale to clarify the nature of this relationship.
 
-Thus, while we found a positive association between the BPQ–Body Awareness subscale and the IAS, this result should be interpreted with caution. Because we could not assess participants’ understanding of the BPQ items, we recommend that future studies using both the BPQ-BA and the IAS control for participants’ interpretation of the scale to clarify the nature of this relationship.
+<!-- Mood -->
+Robust negative associations also emerged between the IAS and mood-related outcomes, aligning with broader evidence linking anxiety and depression to altered interoceptive processing [e.g., @brand2023; @khalsa2018; @nord2022interoceptive]. However, recent studies have reported null or inconsistent associations between interoceptive abilities and mental health symptomatology. For instance, meta-analytic evidence indicates that cardiac interoceptive accuracy tasks are not consistently related to symptoms of depression or anxiety [@desmedt2022does; @jenkinson2024interoception], uggesting that these relationships may not generalize across bodily domains or measurement modalities [@banellis2025interoceptive]. 
 
-Robust negative associations also emerged between the IAS and mood-related outcomes, aligning with broader evidence linking anxiety and depression to altered interoceptive processing [e.g., @brand2023; @khalsa2018; @nord2022interoceptive]. However, recent studies have reported null or inconsistent associations between interoceptive abilities and mental health symptomatology, suggesting that these relationships may not generalize across bodily domains or measurement modalities [@banellis2025interoceptive; @jenkinson2024interoception]. For instance, meta-analytic evidence indicates that cardiac interoceptive accuracy tasks are not consistently related to symptoms of depression or anxiety [@desmedt2022does; @jenkinson2024interoception]. 
+Most previous studies of interoceptive accuracy have relied on objective, performance-based tasks, whereas the IAS represents the first subjective measure explicitly designed to assess perceived interoceptive accuracy. However, correlations between IAS scores and objective measures are typically weak or absent [@arsllanova2022; @brand2023; @petzke2024somatic], highlighting a broader debate about how interoceptive accuracy should be conceptualised and measured. Some researchers argue that accuracy can only be assessed objectively through behavioural tasks, and that self-reports of interoceptive ability more appropriately reflect interoceptive sensibility - i.e., the self-perceived tendency to attend to bodily signals [@khalsa2018; @garfinkel2015knowing].
 
-Most previous studies of interoceptive accuracy have relied on objective, performance-based tasks, whereas the IAS represents the first subjective measure explicitly designed to assess perceived interoceptive accuracy. However, correlations between IAS scores and objective measures are typically weak or absent [@arsllanova2022; @brand2023; @petzke2024somatic], highlighting a broader debate about how interoceptive accuracy should be conceptualised and measured. Many researchers argue that accuracy can only be assessed objectively through behavioural tasks, and that self-reports of interoceptive ability more appropriately reflect interoceptive sensibility - i.e., the self-perceived tendency to attend to and interpret bodily signals [@khalsa2018; @garfinkel2015knowing].
+Others propose that self-report measures should be distinguished according to the specific phenomenon assessed (e.g., attention vs perceived accuracy) to better align with contemporary conceptualisations of interoception [@desmedt2022measures]. Consistent with this view and the original aim of the validation paper, the IAS is a belief-based measure of one’s interoceptive ability rather than a direct index of accuracy. In other words, the IAS falls within the broader dimension of interoceptive sensibility or interoceptive self-report [@khalsa2018; @suksasilp2022towards], which does not imply a correlation with actual interoceptive performance. Ongoing discussions about terminology and measurement highlight the need for continued refinement to improve the reliability, validity, and conceptual clarity of interoceptive assessments [@desmedt2024conceptualization].
 
-Others propose that self-report measures should be distinguished according to the specific phenomenon assessed (e.g., attention vs perceived accuracy) to better align with contemporary conceptualisations of interoception [@desmedt2022measures; @murphy2019]. Consistent with this view and the original aim of the validation paper, the IAS is a belief-based measure of one’s interoceptive ability rather than a direct index of accuracy. In other words, the IAS falls within the broader dimension of interoceptive sensibility or interoceptive self-report [@khalsa2018; @suksasilp2022towards], which does not imply a correlation with actual interoceptive performance. Ongoing discussions about terminology and measurement highlight the need for continued refinement to improve the reliability, validity, and conceptual clarity of interoceptive assessments [@desmedt2024conceptualization].
+<!-- IAS domainn-specific  -->
+While the IAS represents a promising tool within the evolving landscape of interoception measurement [@desmedt2022measures; @suksasilp2022towards], our study highlights a potential domain-specificity of the scale, i.e., certain bodily domains appear to drive the observed associations, suggesting that the IAS may not uniformly reflect general self-reported interoceptive accuracy across all sensations.
+
+Empirically, specific item pairs, most consistently Hunger–Thirst, Bruise–Blood sugar, and Muscles–Pain, showed reliable negative correlations with depression and anxiety, sometimes matching or exceeding effects observed for the full IAS. These pairings also exhibited the most consistent associations with psychopathology measures, whereas other pairings showed no robust significant relationships. Some pairings also revealed associations with other clinical or interoceptive measures (e.g., Hunger–Thirst with borderline personality indices) that were not apparent in the aggregate score of the full scale. In contrast, other pairings (e.g., Breathing–Heart, Cough–Sneeze, Wind–Burp) contributed little unique variance. These findings indicate that relying solely on the total IAS score may obscure meaningful relationships and caution against treating the scale as strictly unitary.
+
+Interpretation is further complicated by the lack of contextual information in IAS items. For instance, a racing heart could reflect anxiety or physical exertion; without context, it is unclear which bodily state participants report. Consistent with prior work emphasizing contextualized assessment [@vlemincx2023novel], our results suggest that the utility of self-report may lie less in broad aggregation across domains and more in targeted evaluation of physiologically and situationally meaningful sensations. Collectively, these findings underscore the value of domain-specific and potentially context-sensitive analyses for understanding the relevance and interpretability of self-reported interoception and suggest that the IAS may benefit from a more differentiated approach that accounts for these influences.
+
+<!-- Further improvements to the IAS -->
+Our results also suggest several avenues for improving the IAS. Analogue-style rating scales captured greater variability, enhancing sensitivity to individual differences, and specific item pairings allowed more precise differentiation among individuals, often outperforming global scores in predictive value. However, even the refined 14-item IAS has limitations: it underrepresents key interoceptive modalities such as cardiac, respiratory, and nuanced somatosensory signals, limiting its ability to capture the full breadth of interoceptive processes.
+
+These limitations highlight the need for future scale development that balances breadth (covering multiple items per modality) with depth (domain-specific subscales), incorporates contextualized item wording to clarify which bodily states participants report, retains the benefits of analogue or wider rating ranges (e.g., 1–7 instead of 1–5), and optimizes coverage across physiologically and psychologically relevant bodily domains. Such an approach would improve interpretability, sensitivity, and practical utility, enabling a more nuanced mapping of interoceptive abilities onto affective, cognitive, and health-related outcomes.
+
+<!-- Limitations -->
+Lastly, while we did not evaluate the IAS alongside other widely used questionnaires, such as the BPQ or MAIA, it is worth noting several limitations of these frequently used questionnaires.  The MAIA-2 contains subscales (e.g., Not-Worrying, Not-Distracting) with weak reliability and minimal relation to a general interoception factor [@ferentzi2021examining; @rogowska2023validation]. Other subscales primarily reflect higher-level cognitive tendencies, such as mindfulness and attentional regulation, rather than interoceptive body awareness [@todd2022; @vig2023self]. Similarly, the BPQ’s Body Awareness and Autonomic Reactivity subscales show conceptual and psychometric concerns, and BPQ scores often overlap substantially with negative affect, raising questions about their specificity as measures of interoceptive sensibility [@campos2021; @gabriele2022dissociations; @vig2023self]. 
+
+Because the IAS is a newly developed questionnaire and the only one designed to assess interoceptive self-reported accuracy - a dimension previously assessed solely through objective tasks such as the HDT and HCT - our focus was on evaluating its structure and correlates without introducing established measures with documented shortcomings. Nonetheless, future research should employ novel methods, such as Exploratory Graph Analysis, to clarify the convergent and divergent validity of these questionnaires across interoceptive domains.
 
 
 # References
