--- a/paper/1_Initial/manuscript.qmd
+++ b/paper/1_Initial/manuscript.qmd
@@ -148,7 +148,7 @@ editor_options:
 
 <!-- Interoception definition -->
 
-Interoception refers to the process of sensing, interpreting and integrating information pertaining to internal organs, such as the heart, the lungs or the gut [@khalsa2018interoception].
+Interoception refers to the process of sensing, interpreting and integrating information pertaining to internal organs, such as the heart, the lungs or the gut [@khalsa2018interoception]. 
 While recent research emphasizes a key role of interoception in a variety of processes (e.g., emotion regulation, decision making) and of outcomes (physical and psychological well being), the field remains clouded by concerns about how interoception is assessed.
 
 ## The Interoceptive Assessment Puzzle
@@ -553,32 +553,34 @@ The present study provides a comprehensive evaluation of the IAS, examining both
 
 <!-- Study 1 findings -->
 
-In Study 1, the factor structure of the IAS was reanalysed, leading to a refined 14-item version of the scale. A shorter IAS had previously been proposed by @lin2023, who developed a 12-item version by removing items with local dependency, high difficulty, or low discrimination. Their parallel analysis supported a unidimensional structure, although this method is known to underestimate the number of factors in multidimensional data [@golino2017exploratory; @markos2024dimensionality]. Consequently, the 12-item IAS was interpreted as reflecting a single underlying factor of interoceptive accuracy.
+In Study 1, the factor structure of the IAS was reanalysed, leading to a refined 14-item version of the scale. A shorter IAS had previously been proposed by @lin2023, who developed a 12-item version by removing items with local dependency, high difficulty, or low discrimination. Their parallel analysis supported a unidimensional structure, although this method is known to underestimate the number of factors in multidimensional data [@golino2017exploratory; @markos2024dimensionality]. Consequently, the 12-item IAS was interpreted as reflecting a single underlying factor of interoceptive self-reported accuracy.
 
-In contrast, Study 1 applied multiple complementary analytical approaches, including EGA, FA, and HCA. Across datasets and methods, the same tightly coupled item pairs consistently emerged, corresponding to distinct bodily domains such as visceral sensations, musculoskeletal cues, and expulsion phenomena, after several items (e.g., Tickle, Taste, Affective Touch) were excluded due to instability, redundancy, or weak associations.
+In contrast, Study 1 applied multiple complementary analytical approaches, including EGA, FA, and HCA. Across datasets and methods, after several items (e.g., Tickle, Taste, Affective Touch) were excluded due to instability, redundancy, or weak associations, the same tightly coupled item pairs consistently emerged, corresponding to distinct bodily domains such as visceral sensations, musculoskeletal cues, and expulsion phenomena.
 
-These findings challenge the assumption that the IAS is unidimensional [@murphy2019; @brand2023]. Whereas @lin2023’s Item Response Theory (IRT)-based approach treated locally dependent items as artefacts to be removed, our results suggest that such dependencies may instead represent theoretically meaningful relationships (e.g., Heart–Breathing). Because IRT assumes unidimensionality [@nguyen2014introduction], this approach may have obscured structured item clusters that capture distinct but interrelated aspects of interoceptive accuracy. Nevertheless, the resulting 14-item IAS from study 1 demonstrated greater interpretability and efficiency, although its psychometric properties require further validation.
+Our findings challenge the assumption that the IAS is unidimensional [@murphy2019; @brand2023]. Whereas @lin2023’s Item Response Theory (IRT)-based approach treated locally dependent items as artefacts to be removed, our results suggest that such dependencies may instead represent theoretically meaningful relationships (e.g., Heart–Breathing). Because IRT assumes unidimensionality [@nguyen2014introduction], this approach may have obscured, in their paper, structured item clusters that capture distinct but interrelated aspects of interoceptive self-reported accuracy. Nevertheless, the resulting 14-item IAS from study 1 demonstrated greater interpretability and efficiency, although its psychometric properties still require further validation.
 
 <!-- Study 2 findings -->
 
 <!-- Interoception and interoception-related -->
-Study 2 examined the associations between the IAS, its item pairs identified in Study 1, and a range of interoceptive, affective, psychopathological, personality, and related measures. Consistent with previous research, self-reported interoceptive accuracy as assessed by the IAS showed reliable associations with other interoceptive and interoception-related measures [@brand2023; @garfinkel2015knowing; @gaggero2021]. Positive associations were found with interoceptive sensibility, particularly with MAIA facets reflecting noticing and trusting bodily sensations, attention regulation, and awareness of mind–body integration. In contrast, negative associations were observed with measures of interoceptive deficits, such as alexithymia and interoceptive confusion.
+Study 2 examined the associations between the IAS, the item pairs identified in Study 1, and a range of interoceptive, affective, psychopathological, personality, and related measures. Consistent with previous research, self-reported interoceptive accuracy as assessed by the IAS showed reliable associations with other interoceptive and interoception-related measures [@brand2023; @garfinkel2015knowing; @gaggero2021]. Positive associations were found with interoceptive sensibility, particularly with MAIA facets reflecting noticing and trusting bodily sensations, attention regulation, and awareness of mind–body integration. In contrast, negative associations were observed with measures of interoceptive deficits, such as alexithymia and interoceptive confusion.
 
-Although the relationships between the BPQ–Body Awareness and the IAS, and between the BPQ–Autonomic Reactivity and the IAS, were both significant, they showed opposite directions: the former was positive, whereas the latter was negative, aligning with previous findings [@brand2023; @koike2023; @gaggero2021]. However, the literature remains mixed regarding the direction, magnitude, and significance of the relationship between the body awareness subscale and the IAS, with some studies reporting negative associations [@lin2023] and others positive [@brand2023; @gaggero2021; @todd2022] and others quadratic [@campos2021].
+Although the relationships between the BPQ–Body Awareness and the IAS, and between the BPQ–Autonomic Reactivity and the IAS, were both significant, they showed opposite directions: the former was positive, whereas the latter was negative, aligning with previous findings [@brand2023; @koike2023; @gaggero2021]. However, the literature remains mixed regarding the direction, magnitude, and significance of the relationship between the Body Awareness subscale and the IAS, with some studies reporting negative associations [@lin2023] and others positive [@brand2023; @gaggero2021; @todd2022] and others quadratic [@campos2021].
 
-Moreover, the Body Awareness subscale has been criticised for its ambiguous instructions, specifically whether respondents are meant to indicate attentional focus on bodily sensations, perceived accuracy in detecting them, or simply the frequency of such sensations. As a result, associations with other measures may vary depending on how participants interpret the items [@campos2021; @gabriele2022dissociations; @gaggero2021]. The theoretical focus of the BPQ-BA is also debated: some authors interpret it as assessing awareness of sensations during anxiety [@trevisan2021adaptive], whereas others view it as reflecting general awareness of both neutral and negative sensations [@desmedt2022]. Thus, while we found a positive association between the BPQ–Body Awareness subscale and the IAS, this result should be interpreted with caution. Because we could not assess participants’ understanding of the BPQ items, we recommend that future studies using both the BPQ-BA and the IAS control for participants’ interpretation of the scale to clarify the nature of this relationship.
+Moreover, the Body Awareness subscale has been criticised for its ambiguous instructions, specifically whether respondents are meant to indicate attentional focus on bodily sensations, perceived accuracy in detecting them, or simply the frequency of such sensations. As a result, associations with other measures may vary depending on how participants interpret the items [@campos2021; @gabriele2022dissociations; @gaggero2021]. The theoretical focus of the BPQ-BA has also been debated: some authors interpret it as assessing awareness of sensations during anxiety [@trevisan2021adaptive], whereas others view it as reflecting general awareness of both neutral and negative sensations [@desmedt2022]. Thus, while we found a positive association between the BPQ–Body Awareness subscale and the IAS, this result should be interpreted with caution. Since we could not assess participants’ interpretation of the BPQ items, we recommend that future studies using both the Body Awareness subscale and the IAS control for participants’ interpretation to clarify the nature of this relationship.
 
 <!-- Mood -->
-Robust negative associations also emerged between the IAS and mood-related outcomes, aligning with broader evidence linking anxiety and depression to altered interoceptive processing [e.g., @brand2023; @khalsa2018; @nord2022interoceptive]. However, recent studies have reported null or inconsistent associations between interoceptive abilities and mental health symptomatology. For instance, meta-analytic evidence indicates that cardiac interoceptive accuracy tasks are not consistently related to symptoms of depression or anxiety [@desmedt2022does; @jenkinson2024interoception], uggesting that these relationships may not generalize across bodily domains or measurement modalities [@banellis2025interoceptive]. 
+Robust negative associations also emerged between the IAS and mood-related outcomes, aligning with broader evidence linking anxiety and depression to altered interoceptive processing [e.g., @brand2023; @khalsa2018; @nord2022interoceptive]. However, recent studies have reported null or inconsistent associations between interoceptive abilities and mental health symptomatology. For instance, meta-analytic evidence indicates that cardiac interoceptive accuracy tasks are not consistently related to symptoms of depression or anxiety [@desmedt2022does; @jenkinson2024interoception], suggesting that these relationships may not generalize across bodily domains or measurement modalities [@banellis2025interoceptive]. 
 
-Most previous studies of interoceptive accuracy have relied on objective, performance-based tasks, whereas the IAS represents the first subjective measure explicitly designed to assess perceived interoceptive accuracy. However, correlations between IAS scores and objective measures are typically weak or absent [@arsllanova2022; @brand2023; @petzke2024somatic], highlighting a broader debate about how interoceptive accuracy should be conceptualised and measured. Some researchers argue that accuracy can only be assessed objectively through behavioural tasks, and that self-reports of interoceptive ability more appropriately reflect interoceptive sensibility - i.e., the self-perceived tendency to attend to bodily signals [@khalsa2018; @garfinkel2015knowing].
+Most previous studies of interoceptive accuracy have relied on objective, performance-based tasks, whereas the IAS represents the first subjective measure explicitly designed to assess perceived interoceptive accuracy. However, correlations between IAS scores and objective measures of accuracy are typically weak or absent [@arslanova2022; @brand2023; @petzke2024somatic], highlighting a broader debate about how interoceptive accuracy should be conceptualised and measured. Some researchers argue that accuracy can only be assessed objectively through behavioural tasks, and that self-reports of interoceptive ability more appropriately reflect interoceptive sensibility - i.e., the self-perceived tendency to attend to bodily signals [@khalsa2018; @garfinkel2015knowing].
 
 Others propose that self-report measures should be distinguished according to the specific phenomenon assessed (e.g., attention vs perceived accuracy) to better align with contemporary conceptualisations of interoception [@desmedt2022measures]. Consistent with this view and the original aim of the validation paper, the IAS is a belief-based measure of one’s interoceptive ability rather than a direct index of accuracy. In other words, the IAS falls within the broader dimension of interoceptive sensibility or interoceptive self-report [@khalsa2018; @suksasilp2022towards], which does not imply a correlation with actual interoceptive performance. Ongoing discussions about terminology and measurement highlight the need for continued refinement to improve the reliability, validity, and conceptual clarity of interoceptive assessments [@desmedt2024conceptualization].
 
 <!-- IAS domainn-specific  -->
 While the IAS represents a promising tool within the evolving landscape of interoception measurement [@desmedt2022measures; @suksasilp2022towards], our study highlights a potential domain-specificity of the scale, i.e., certain bodily domains appear to drive the observed associations, suggesting that the IAS may not uniformly reflect general self-reported interoceptive accuracy across all sensations.
 
-Empirically, specific item pairs, most consistently Hunger–Thirst, Bruise–Blood sugar, and Muscles–Pain, showed reliable negative correlations with depression and anxiety, sometimes matching or exceeding effects observed for the full IAS. These pairings also exhibited the most consistent associations with psychopathology measures, whereas other pairings showed no robust significant relationships. Some pairings also revealed associations with other clinical or interoceptive measures (e.g., Hunger–Thirst with borderline personality indices) that were not apparent in the aggregate score of the full scale. In contrast, other pairings (e.g., Breathing–Heart, Cough–Sneeze, Wind–Burp) contributed little unique variance. These findings indicate that relying solely on the total IAS score may obscure meaningful relationships and caution against treating the scale as strictly unitary.
+Empirically, specific item pairs, most consistently Hunger–Thirst, Bruise–Blood sugar, and Muscles–Pain, showed reliable negative correlations with depression and anxiety, sometimes matching or exceeding effects observed for the full IAS. These pairings also exhibited the most consistent associations with psychopathology measures, whereas other pairings showed no robust significant relationships. 
+
+Some pairings also revealed associations with other clinical or interoceptive measures (e.g., Hunger–Thirst with borderline personality indices) that were not apparent in the aggregate score of the full scale. In contrast, other pairings (e.g., Breathing–Heart, Cough–Sneeze, Wind–Burp) contributed little unique variance. These findings indicate that relying solely on the total IAS score may obscure meaningful relationships and caution against treating the scale as strictly unitary.
 
 Interpretation is further complicated by the lack of contextual information in IAS items. For instance, a racing heart could reflect anxiety or physical exertion; without context, it is unclear which bodily state participants report. Consistent with prior work emphasizing contextualized assessment [@vlemincx2023novel], our results suggest that the utility of self-report may lie less in broad aggregation across domains and more in targeted evaluation of physiologically and situationally meaningful sensations. Collectively, these findings underscore the value of domain-specific and potentially context-sensitive analyses for understanding the relevance and interpretability of self-reported interoception and suggest that the IAS may benefit from a more differentiated approach that accounts for these influences.
 
