--- a/paper/1_Initial/manuscript.qmd
+++ b/paper/1_Initial/manuscript.qmd
@@ -585,7 +585,7 @@ Some pairings also revealed associations with other clinical or interoceptive me
 Interpretation is further complicated by the lack of contextual information in IAS items. For instance, a racing heart could reflect anxiety or physical exertion; without context, it is unclear which bodily state participants report. Consistent with prior work emphasizing contextualized assessment [@vlemincx2023novel], our results suggest that the utility of self-report may lie less in broad aggregation across domains and more in targeted evaluation of physiologically and situationally meaningful sensations. Collectively, these findings underscore the value of domain-specific and potentially context-sensitive analyses for understanding the relevance and interpretability of self-reported interoception and suggest that the IAS may benefit from a more differentiated approach that accounts for these influences.
 
 <!-- Further improvements to the IAS -->
-Our results also suggest several avenues for improving the IAS. Analogue-style rating scales captured greater variability, enhancing sensitivity to individual differences, and specific item pairings allowed more precise differentiation among individuals, often outperforming global scores in predictive value. However, even the refined 14-item IAS has limitations: it underrepresents key interoceptive modalities such as cardiac, respiratory, and nuanced somatosensory signals, limiting its ability to capture the full breadth of interoceptive processes.
+Our results also suggest other several avenues for improving the IAS. Analogue-style rating scales captured greater variability, enhancing sensitivity to individual differences, and specific item pairings allowed more precise differentiation among individuals, often outperforming global scores in predictive value. However, even the refined 14-item IAS has limitations: it underrepresents key interoceptive modalities such as cardiac, respiratory, and nuanced somatosensory signals, limiting its ability to capture the full breadth of interoceptive processes.
 
 These limitations highlight the need for future scale development that balances breadth (covering multiple items per modality) with depth (domain-specific subscales), incorporates contextualized item wording to clarify which bodily states participants report, retains the benefits of analogue or wider rating ranges (e.g., 1–7 instead of 1–5), and optimizes coverage across physiologically and psychologically relevant bodily domains. Such an approach would improve interpretability, sensitivity, and practical utility, enabling a more nuanced mapping of interoceptive abilities onto affective, cognitive, and health-related outcomes.
 
