--- a/paper/1_Initial/bibliography.bib
+++ b/paper/1_Initial/bibliography.bib
@@ -9,6 +9,36 @@
   publisher={MDPI}
 }
 
+@article{bruni2023interoception,
+  title={Interoception across domains: assessing the role of age},
+  author={Bruni, Pietra},
+  journal={Innovation in Aging},
+  volume={7},
+  pages={755},
+  year={2023},
+  publisher={Oxford University Press}
+}
+@article{garfinkel2016interoceptive,
+  title={Interoceptive dimensions across cardiac and respiratory axes},
+  author={Garfinkel, Sarah N and Manassei, Miranda F and Hamilton-Fletcher, Giles and In den Bosch, Yvo and Critchley, Hugo D and Engels, Miriam},
+  journal={Philosophical Transactions of the Royal Society B: Biological Sciences},
+  volume={371},
+  number={1708},
+  pages={20160014},
+  year={2016},
+  publisher={The Royal Society}
+}
+
+@article{ferentzi2018interoceptive,
+  title={Interoceptive accuracy and body awareness--Temporal and longitudinal associations in a non-clinical sample},
+  author={Ferentzi, Eszter and Drew, Raechel and Tihanyi, Benedek T and K{\"o}teles, Ferenc},
+  journal={Physiology \& behavior},
+  volume={184},
+  pages={100--107},
+  year={2018},
+  publisher={Elsevier}
+}
+
 @article{murtagh2014ward,
   title={Ward's hierarchical agglomerative clustering method: which algorithms implement Ward's criterion?},
   author={Murtagh, Fionn and Legendre, Pierre},
@@ -168,6 +198,69 @@
   pages={33271},
   year={2022},
   publisher={University of California Press}
+}
+
+@article{garfinkel2016interoceptive,
+  title={Interoceptive dimensions across cardiac and respiratory axes},
+  author={Garfinkel, Sarah N and Manassei, Miranda F and Hamilton-Fletcher, Giles and In den Bosch, Yvo and Critchley, Hugo D and Engels, Miriam},
+  journal={Philosophical Transactions of the Royal Society B: Biological Sciences},
+  volume={371},
+  number={1708},
+  pages={20160014},
+  year={2016},
+  publisher={The Royal Society}
+}
+
+@article{eggart2019major,
+  title={Major depressive disorder is associated with impaired interoceptive accuracy: A systematic review},
+  author={Eggart, Michael and Lange, Andreas and Binser, Martin J and Queri, Silvia and M{\"u}ller-Oerlinghausen, Bruno},
+  journal={Brain sciences},
+  volume={9},
+  number={6},
+  pages={131},
+  year={2019},
+  publisher={MDPI}
+}
+
+@article{bruni2023interoception,
+  title={Interoception across domains: assessing the role of age},
+  author={Bruni, Pietra},
+  journal={Innovation in Aging},
+  volume={7},
+  pages={755},
+  year={2023},
+  publisher={Oxford University Press}
+}
+
+@article{clemente2024relationship,
+  title={The relationship between self-reported interoception and anxiety: A systematic review and meta-analysis},
+  author={Clemente, Rhea and Murphy, Amanda and Murphy, Jennifer},
+  journal={Neuroscience \& Biobehavioral Reviews},
+  volume={167},
+  pages={105923},
+  year={2024},
+  publisher={Elsevier}
+}
+
+@article{adams2022association,
+  title={The association between anxiety and cardiac interoceptive accuracy: A systematic review and meta-analysis},
+  author={Adams, Kiera Louise and Edwards, Alexandra and Peart, Charlotte and Ellett, Lyn and Mendes, In{\^e}s and Bird, Geoffrey and Murphy, Jennifer},
+  journal={Neuroscience \& Biobehavioral Reviews},
+  volume={140},
+  pages={104754},
+  year={2022},
+  publisher={Elsevier}
+}
+
+@article{camara2025neurophysiological,
+  title={Neurophysiological dynamics of visceral signals in emotion, self and bodily consciousness},
+  author={Camara, C{\'e}lia F and Filippetti, Maria Laura and Sel, Alejandra},
+  journal={Proceedings B},
+  volume={292},
+  number={2048},
+  pages={20242625},
+  year={2025},
+  publisher={The Royal Society}
 }
 
 @article{banellis2025interoceptive,
