--- a/paper/1_Initial/manuscript.qmd
+++ b/paper/1_Initial/manuscript.qmd
@@ -549,50 +549,35 @@ The 14-item IAS performed similarly to the original 21-item version, showing com
 # General Discussion
 
 <!-- Aims -->
-The present study provides a comprehensive evaluation of the IAS, examining both its structure (study 1) and its dispositional correlates (study 2). These studies offer novel insights into the conceptual interpretation, and practical applications of the IAS. In this discussion, these findings are contextualized within the broader landscape of interoception research.
+The present mega-analysis provides a comprehensive evaluation of the IAS, examining both its structure (study 1) and its dispositional correlates (study 2). These studies offer novel insights into the conceptual interpretation, and practical applications of the IAS. In this discussion, these findings are contextualized within the broader landscape of interoception research.
 
-<!-- Study 1 findings -->
+<!-- Structural insights from Study 1 -->
 
-In Study 1, the factor structure of the IAS was reanalysed, leading to a refined 14-item version of the scale. A shorter IAS had previously been proposed by @lin2023, who developed a 12-item version by removing items with local dependency, high difficulty, or low discrimination. Their parallel analysis supported a unidimensional structure, although this method is known to underestimate the number of factors in multidimensional data [@golino2017exploratory; @markos2024dimensionality]. Consequently, the 12-item IAS was interpreted as reflecting a single underlying factor of interoceptive self-reported accuracy.
+Study 1 re-analysed the IAS structure using a combination of traditional psychometric and network-based methods. Across these complementary approaches, seven stable item pairs consistently emerged (i.e., Hungry–Thirsty, Urinate–Defecate, Muscles–Pain, Breathing–Heart, Cough–Sneeze, Wind–Burp, and Bruise–Blood sugar) yielding a refined 14-item structure that demonstrated superior model fit and cross-dataset stability compared to previously proposed unidimensional or bifactor solutions. These findings challenge earlier interpretations of the IAS as reflecting a single latent construct [e.g., @brand2023; @murphy2019] and instead indicate that the scale captures multiple, interrelated but domain-specific clusters of bodily sensations.
 
-In contrast, Study 1 applied multiple complementary analytical approaches, including EGA, FA, and HCA. Across datasets and methods, after several items (e.g., Tickle, Taste, Affective Touch) were excluded due to instability, redundancy, or weak associations, the same tightly coupled item pairs consistently emerged, corresponding to distinct bodily domains such as visceral sensations, musculoskeletal cues, and expulsion phenomena.
+A shorter version of the IAS was previously proposed by @lin2023, who developed a 12-item form based on item response theory analyses. Their analysis supported a unidimensional structure, which they interpreted as indexing a single factor of self-reported interoceptive accuracy. In contrast, the present results suggest that apparent local dependencies between items may not represent measurement artefacts but rather theoretically meaningful associations among functionally or phenomenologically coupled sensations (e.g., Heart–Breathing), corresponding to distinct bodily domains such as visceral sensations, musculoskeletal cues, and expulsion phenomena.
 
-Our findings challenge the assumption that the IAS is unidimensional [@murphy2019; @brand2023]. Whereas @lin2023’s Item Response Theory (IRT)-based approach treated locally dependent items as artefacts to be removed, our results suggest that such dependencies may instead represent theoretically meaningful relationships (e.g., Heart–Breathing). Because IRT assumes unidimensionality [@nguyen2014introduction], this approach may have obscured, in their paper, structured item clusters that capture distinct but interrelated aspects of interoceptive self-reported accuracy. Nevertheless, the resulting 14-item IAS from study 1 demonstrated greater interpretability and efficiency, although its psychometric properties still require further validation.
+Such pairings likely reflect sensations that co-occur physiologically or contextually, such as hunger and thirst, or coughing and sneezing, and tend to be perceived and appraised together. This pattern implies that perceived accuracy within one bodily domain generalizes to related sensations, yielding a clustered rather than continuous organization of interoceptive beliefs. 
 
-<!-- Study 2 findings -->
+<!-- there is a paper that states this better but cannot find it yet --> 
+Notably, objective interoceptive accuracy tasks across modalities often show weak or absent associations [e.g., @bruni2023interoception; @ferentzi2018interoceptive; @garfinkel2016interoceptive], whereas self-reported interoceptive beliefs appear to cluster more strongly within shared physiological domains [**ref**]. This divergence reinforces the view that subjective interoceptive accuracy may reflect a domain-specific self-belief system rather than a general perceptual ability.
+
+<!-- Dispositional correlates and domain specificity (Study 2) -->
 
 <!-- Interoception and interoception-related -->
-Study 2 examined the associations between the IAS, the item pairs identified in Study 1, and a range of interoceptive, affective, psychopathological, personality, and related measures. Consistent with previous research, self-reported interoceptive accuracy as assessed by the IAS showed reliable associations with other interoceptive and interoception-related measures [@brand2023; @garfinkel2015knowing; @gaggero2021]. Positive associations were found with interoceptive sensibility, particularly with MAIA facets reflecting noticing and trusting bodily sensations, attention regulation, and awareness of mind–body integration. In contrast, negative associations were observed with measures of interoceptive deficits, such as alexithymia and interoceptive confusion.
+Study 2 extended these findings by examining associations between IAS scores from the full scale and the pairings identified in study 1, with a broad set of interoceptive, affective, personality, and belief-related measures.  Consistent with prior research [e.g., @brand2023; @garfinkel2015knowing; @gaggero2021], the IAS showed positive associations with measures of interoceptive sensibility (e.g., MAIA subscales reflecting noticing, attention regulation, and body trust) and negative associations with measures of interoceptive difficulties (e.g., alexithymia and interoceptive confusion).
 
-Although the relationships between the BPQ–Body Awareness and the IAS, and between the BPQ–Autonomic Reactivity and the IAS, were both significant, they showed opposite directions: the former was positive, whereas the latter was negative, aligning with previous findings [@brand2023; @koike2023; @gaggero2021]. However, the literature remains mixed regarding the direction, magnitude, and significance of the relationship between the Body Awareness subscale and the IAS, with some studies reporting negative associations [@lin2023] and others positive [@brand2023; @gaggero2021; @todd2022] and others quadratic [@campos2021].
+Although associations between the IAS and the BPQ subscales replicated prior work (e.g., @Brand2023; @Koike2023; @Gaggero2021), interpretation remains uncertain due to conceptual ambiguity in the BPQ–Body Awareness subscale. Prior studies have reported positive, negative, and even quadratic relationships (e.g., @Campos2021; @Lin2023), and some authors have suggested that these mixed findings stem from divergent interpretations of the items—specifically, whether they capture attentional focus on bodily sensations or perceived accuracy in detecting them (e.g., @Gabriele2022Dissociations; @Trevisan2021Adaptive). Thus, although we observed a positive association between the BPQ–Body Awareness and the IAS, this result should be interpreted with caution, and future studies should assess participants’ understanding of BPQ items to clarify the nature of this relationship.
 
-Moreover, the Body Awareness subscale has been criticised for its ambiguous instructions, specifically whether respondents are meant to indicate attentional focus on bodily sensations, perceived accuracy in detecting them, or simply the frequency of such sensations. As a result, associations with other measures may vary depending on how participants interpret the items [@campos2021; @gabriele2022dissociations; @gaggero2021]. The theoretical focus of the BPQ-BA has also been debated: some authors interpret it as assessing awareness of sensations during anxiety [@trevisan2021adaptive], whereas others view it as reflecting general awareness of both neutral and negative sensations [@desmedt2022]. Thus, while we found a positive association between the BPQ–Body Awareness subscale and the IAS, this result should be interpreted with caution. Since we could not assess participants’ interpretation of the BPQ items, we recommend that future studies using both the Body Awareness subscale and the IAS control for participants’ interpretation to clarify the nature of this relationship.
+<!-- Mood and psychopathological disorders domain specific -->
 
-<!-- Mood -->
-Robust negative associations also emerged between the IAS and mood-related outcomes, aligning with broader evidence linking anxiety and depression to altered interoceptive processing [e.g., @brand2023; @khalsa2018; @nord2022interoceptive]. However, recent studies have reported null or inconsistent associations between interoceptive abilities and mental health symptomatology. For instance, meta-analytic evidence indicates that cardiac interoceptive accuracy tasks are not consistently related to symptoms of depression or anxiety [@desmedt2022does; @jenkinson2024interoception], suggesting that these relationships may not generalize across bodily domains or measurement modalities [@banellis2025interoceptive]. 
+Across dispositional constructs, negative associations emerged between self-reported interoceptive accuracy (IAS) and a range of affective and psychopathological traits. Individuals reporting greater symptoms of depression and anxiety also tended to perceive themselves as less accurate in detecting bodily signals. Crucially, these associations were not uniform across bodily domains: the strongest effects consistently involved visceral items (e.g., hunger, thirst), whereas cardioceptive and respiratory items showed weaker or inconsistent patterns. This domain-specific pattern highlights that self-perceived accuracy in internal bodily regulation is more psychologically and clinically relevant than accuracy in reflexive or surface-bodily sensations.
 
-Most previous studies of interoceptive accuracy have relied on objective, performance-based tasks, whereas the IAS represents the first subjective measure explicitly designed to assess perceived interoceptive accuracy. However, correlations between IAS scores and objective measures of accuracy are typically weak or absent [@arslanova2022; @brand2023; @petzke2024somatic], highlighting a broader debate about how interoceptive accuracy should be conceptualised and measured. Some researchers argue that accuracy can only be assessed objectively through behavioural tasks, and that self-reports of interoceptive ability more appropriately reflect interoceptive sensibility - i.e., the self-perceived tendency to attend to bodily signals [@khalsa2018; @garfinkel2015knowing].
+This domain-specificity may help explain inconsistencies in the literature linking interoception and emotional symptomatology. Reviews and meta-analyses indicate that performance-based measures of cardiac interoceptive accuracy, historically the dominant index of interoception, are often unrelated to depression or anxiety [@jenkinson2024interoception; @banellis2025interoceptive; @adams2022association]. In contrast, self-reported interoceptive measures show stronger, albeit sometimes divergent, associations with internalizing traits [e.g., @brand2022; @lin2023; @clemente2024relationship; @murphy2019]. These discrepancies likely reflect the distinction between objective sensitivity and metacognitive self-belief [@khalsa2018; @garfinkel2015knowing; @suksasilp2022towards]. Our results extend this view by demonstrating that even within self-reported interoception, relationships with affective traits are structured along bodily axes, reinforcing the importance of considering domain-specific facets of the IAS.
 
-Others propose that self-report measures should be distinguished according to the specific phenomenon assessed (e.g., attention vs perceived accuracy) to better align with contemporary conceptualisations of interoception [@desmedt2022measures]. Consistent with this view and the original aim of the validation paper, the IAS is a belief-based measure of one’s interoceptive ability rather than a direct index of accuracy. In other words, the IAS falls within the broader dimension of interoceptive sensibility or interoceptive self-report [@khalsa2018; @suksasilp2022towards], which does not imply a correlation with actual interoceptive performance. Ongoing discussions about terminology and measurement highlight the need for continued refinement to improve the reliability, validity, and conceptual clarity of interoceptive assessments [@desmedt2024conceptualization].
+Beyond mood, similar but weaker patterns emerged across other dispositional traits, again following a visceral-focused gradient. Autistic traits, schizotypal tendencies, and maladaptive personality dimensions generally correlated negatively with IAS scores, primarily for visceral items, whereas cardioceptive and respiratory beliefs contributed little. These findings align with evidence that interoceptive self-beliefs are attenuated in conditions involving social–emotional difficulties or reduced bodily awareness. For example, interoceptive dimensions predict interpersonal-like and disorganized-like schizotypal traits [@pasciucco2025predictive], and autistic individuals report subjective difficulties perceiving internal bodily states such as hunger, thirst, and fatigue, even when objective measures of accuracy are intact [@itoi2023relationship]. More broadly, atypical interoception constitutes a transdiagnostic risk factor for psychopathology, again emphasizing differences across bodily domains [@brewer2023atypical]. Collectively, these results underscore that diminished self-perceived interoceptive accuracy is not a uniform trait but varies systematically by bodily domain, with visceral beliefs showing the clearest psychological relevance.
 
-<!-- IAS domainn-specific  -->
-While the IAS represents a promising tool within the evolving landscape of interoception measurement [@desmedt2022measures; @suksasilp2022towards], our study highlights a potential domain-specificity of the scale, i.e., certain bodily domains appear to drive the observed associations, suggesting that the IAS may not uniformly reflect general self-reported interoceptive accuracy across all sensations.
-
-Empirically, specific item pairs, most consistently Hunger–Thirst, Bruise–Blood sugar, and Muscles–Pain, showed reliable negative correlations with depression and anxiety, sometimes matching or exceeding effects observed for the full IAS. These pairings also exhibited the most consistent associations with psychopathology measures, whereas other pairings showed no robust significant relationships. 
-
-Some pairings also revealed associations with other clinical or interoceptive measures (e.g., Hunger–Thirst with borderline personality indices) that were not apparent in the aggregate score of the full scale. In contrast, other pairings (e.g., Breathing–Heart, Cough–Sneeze, Wind–Burp) contributed little unique variance. These findings indicate that relying solely on the total IAS score may obscure meaningful relationships and caution against treating the scale as strictly unitary.
-
-Interpretation is further complicated by the lack of contextual information in IAS items. For instance, a racing heart could reflect anxiety or physical exertion; without context, it is unclear which bodily state participants report. Consistent with prior work emphasizing contextualized assessment [@vlemincx2023novel], our results suggest that the utility of self-report may lie less in broad aggregation across domains and more in targeted evaluation of physiologically and situationally meaningful sensations. Collectively, these findings underscore the value of domain-specific and potentially context-sensitive analyses for understanding the relevance and interpretability of self-reported interoception and suggest that the IAS may benefit from a more differentiated approach that accounts for these influences.
-
-<!-- Further improvements to the IAS -->
-Our results also suggest other several avenues for improving the IAS. Analogue-style rating scales captured greater variability, enhancing sensitivity to individual differences, and specific item pairings allowed more precise differentiation among individuals, often outperforming global scores in predictive value. However, even the refined 14-item IAS has limitations: it underrepresents key interoceptive modalities such as cardiac, respiratory, and nuanced somatosensory signals, limiting its ability to capture the full breadth of interoceptive processes.
-
-These limitations highlight the need for future scale development that balances breadth (covering multiple items per modality) with depth (domain-specific subscales), incorporates contextualized item wording to clarify which bodily states participants report, retains the benefits of analogue or wider rating ranges (e.g., 1–7 instead of 1–5), and optimizes coverage across physiologically and psychologically relevant bodily domains. Such an approach would improve interpretability, sensitivity, and practical utility, enabling a more nuanced mapping of interoceptive abilities onto affective, cognitive, and health-related outcomes.
-
-<!-- Limitations -->
-Lastly, while we did not evaluate the IAS alongside other widely used questionnaires, such as the BPQ or MAIA, it is worth noting several limitations of these frequently used questionnaires.  The MAIA-2 contains subscales (e.g., Not-Worrying, Not-Distracting) with weak reliability and minimal relation to a general interoception factor [@ferentzi2021examining; @rogowska2023validation]. Other subscales primarily reflect higher-level cognitive tendencies, such as mindfulness and attentional regulation, rather than interoceptive body awareness [@todd2022; @vig2023self]. Similarly, the BPQ’s Body Awareness and Autonomic Reactivity subscales show conceptual and psychometric concerns, and BPQ scores often overlap substantially with negative affect, raising questions about their specificity as measures of interoceptive sensibility [@campos2021; @gabriele2022dissociations; @vig2023self]. 
-
-Because the IAS is a newly developed questionnaire and the only one designed to assess interoceptive self-reported accuracy - a dimension previously assessed solely through objective tasks such as the HDT and HCT - our focus was on evaluating its structure and correlates without introducing established measures with documented shortcomings. Nonetheless, future research should employ novel methods, such as Exploratory Graph Analysis, to clarify the convergent and divergent validity of these questionnaires across interoceptive domains.
+Taken together, the evidence indicates that the IAS reflects a domain-structured metacognitive construct, complementary to but distinct from objective interoceptive performance. Visceral beliefs—linked to hunger, thirst, or pain—consistently show the strongest relationships with emotional and dispositional traits, whereas cardioceptive and respiratory beliefs contribute little. Recognizing this domain specificity not only clarifies inconsistencies in prior studies emphasizing heartbeat detection but also highlights the importance of assessing a wider range of interoceptive modalities in future research, particularly those related to visceral homeostasis.
 
 
 # References
